--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,116 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  min-height: 100vh;
+  background-color: #d5ebfe; 
 }
 
-.App-link {
-  color: #61dafb;
+.chat-container {
+  max-height: calc(100vh - 50px); 
+  padding: 20px;
+  border: 8px solid #4dd59f; 
+  border-radius: 8px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  overflow: hidden;
+  background-color: #fff;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.chat-messages {
+  max-height: calc(100vh - 150px); 
+  overflow: auto;
+  padding-right: 10px; 
+  padding-left: 10px;
+}
+
+.message {
+  border: .5px solid #e1dcdc;
+  border-radius: 4px;
+  margin: 5px 0;
+  padding: 10px;
+  min-height: 50px; 
+  min-width: 200px; 
+  padding-right: 10px;
+}
+
+.user-message {
+  background-color: #007bff;
+  color: #fff;
+}
+
+
+.message.selected-message {
+  border: 2px solid rgb(21, 4, 204); 
+}
+
+.message:hover {
+  background-color: #f5f5f5;
+}
+
+.message-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 5px;
+}
+
+.user-info {
+  font-weight: bold;
+}
+
+.message-timestamp {
+  font-size: 12px;
+  color: #555;
+
+}
+
+.message-content {
+  font-size: 14px;
+}
+
+.replies {
+  margin-left: 20px;
+  border-left: 1px dashed #7dd0c7;
+  padding-left: 10px;
+}
+
+.message-input {
+  display: flex;
+  align-items: center;
+  padding: 10px;
+
+}
+
+.name-input,
+.text-input {
+  flex-grow: 1;
+  padding: 12px 8px; 
+  border: none;
+  border-radius: 4px;
+  background-color: #f5f5f5;
+  margin-right: 10px;
+  margin-top: 10px;
+}
+
+
+.name-input {
+  width: calc(33.33% - 10px); 
+}
+
+.text-input {
+  width: 66.66%; 
+}
+
+.message-input button {
+  background-color: #007bff;
+  color: #fff;
+  border: 3px solid #4dd59f;;
+  border-radius: 4px;
+  padding: 8px 15px;
+  cursor: pointer;
+  margin-top: 10px
+}
+
+.message-input button:hover {
+  background-color: #1b22eb;
 }
